input protection - only numbers

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				</div>
 			</div>
 			<button>Oblicz</button>
+			<p class="error-info">Wpisz odpowiednią średnicę wiertła!</p>
 
 			<p class="spindle-info">
 				Optymalne obroty to: <span class="spindle-rate"></span>
