--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Exchange Rate App</title>
+		<title>Kalkulator obrotów dla wierteł HSS</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -17,11 +17,19 @@
 		></script>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body>
+	<body data-mode="light">
 		<div class="wrapper">
 			<div class="header">
-				<h1>Kalkulator Obrotów</h1>
+				<h1>Kalkulator Obrotów wierteł HSS</h1>
 				<p>Dobierz najlepsze parametry do obróbki!</p>
+			</div>
+			<div>
+				<input type="checkbox" class="checkbox" id="toggleMode" />
+				<label class="label" for="toggleMode">
+					<i class="fas fa-moon"></i>
+					<i class="fas fa-sun"></i>
+					<div class="ball"></div>
+				</label>
 			</div>
 			<div class="app-body">
 				<div class="section-left">
