full version deskop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body data-mode="light">
 		<div class="wrapper">
 			<div class="header">
-				<h1>Kalkulator Obrotów wierteł HSS</h1>
+				<h1>Kalkulator obrotów wierteł HSS</h1>
 				<p>Dobierz najlepsze parametry do obróbki!</p>
 			</div>
 			<div>
